<resources>
    <string name="app_name">GrocerEase</string>
    <string name="title_home">Home</string>
    <string name="title_list">List</string>
    <string name="title_recs">Recommendations</string>
    <string name="title_map">Map</string>
    <string name="title_nutrition">Nutrition</string>
    <string name="login">Login</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="register_account_text">Don\'t have an account? Register here</string>
    <string name="login_account_text">Have an account? Login here</string>
    <string name="password_text">Password</string>
    <string name="email_text">Email</string>
    <string name="login_title">Grocerease</string>
    <string name="grocery_list">Grocery List</string>
    <string name="height_text">Height (in inches)</string>
    <string name="age_text">Age</string>
    <string name="info_button">Info</string>
    <string name="addItemText">Add</string>
    <string name="addBlogSuggestion">Add Blog</string>
    <string name="username_text">Username</string>
    <string name="weight_text">Weight (lbs)</string>
    <string name="profilebutton">ProfileButton</string>
    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="item_amount_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>