<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp" />

    <EditText
        android:id="@+id/usernameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_text"
        android:inputType="textPersonName"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/emailEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_text"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/passwordEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/weightEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/weight_text"
        android:inputType="numberDecimal"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/heightEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/height_text"
        android:inputType="number"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/ageEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age_text"
        android:inputType="number"
        android:layout_marginBottom="16dp" />

    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_account_text"
        android:textColor="@color/purple_500"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
